--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "new",
+  "name": "infoviz-altair-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,12 +11,12 @@
   },
   "dependencies": {
     "d3": "^7.9.0",
-    "date-fns": "^4.1.0",
     "react": "^19.0.0",
-    "react-datepicker": "^8.1.0",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-select": "^5.10.0"
+    "react-router-dom": "^7.4.0",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
